[gd_scene load_steps=76 format=3 uid="uid://be01056xkuyyv"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_luo4i"]
[ext_resource type="Texture2D" uid="uid://cxjbmochmichk" path="res://bin/gdextension_icons/CharAni-Sheet4.png" id="2_6urtv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gxv7v"]
radius = 9.0
height = 18.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mkajk"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pofp3"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_heyxy"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0wt6"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8qiq"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crkvu"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4t6t"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktvnj"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4b3f"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7seb8"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ods0m"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 736, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5p1y"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 672, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lgt3"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulhc5"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 704, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wytgg"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytyib"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfxne"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5jly"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab2pl"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmsis"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 608, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0jh0"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueivt"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rmoj"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_62s6p"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc5pe"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18157"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e145y"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 512, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m18rr"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 512, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_636e7"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 512, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exvnp"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 512, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_akb0i"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 512, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_blj82"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 512, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnuna"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uyw3"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_055un"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx430"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5eme"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u22x"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 544, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7880"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gkw5"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_71a78"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2wnx"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsxq1"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy35p"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8dgp"]
atlas = ExtResource("2_6urtv")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rbag"]
atlas = ExtResource("2_6urtv")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_80q47"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ab8i0"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wajoy"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31rr6"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gse6b"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fmjy"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkjm2"]
atlas = ExtResource("2_6urtv")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8ppt"]
atlas = ExtResource("2_6urtv")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp60a"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l705"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pehs"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l488e"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j5s1"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j51b4"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoq1l"]
atlas = ExtResource("2_6urtv")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rhjp"]
atlas = ExtResource("2_6urtv")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m6vs"]
atlas = ExtResource("2_6urtv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfeuf"]
atlas = ExtResource("2_6urtv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqlcd"]
atlas = ExtResource("2_6urtv")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cujht"]
atlas = ExtResource("2_6urtv")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4fdc"]
atlas = ExtResource("2_6urtv")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwksv"]
atlas = ExtResource("2_6urtv")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20y7g"]
atlas = ExtResource("2_6urtv")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c314b"]
atlas = ExtResource("2_6urtv")
region = Rect2(224, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u8b4f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkajk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pofp3")
}],
"loop": true,
"name": &"idle_down",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_heyxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0wt6")
}],
"loop": true,
"name": &"idle_left",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8qiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crkvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4t6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktvnj")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4b3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7seb8")
}],
"loop": true,
"name": &"idle_up",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ods0m")
}],
"loop": true,
"name": &"shield_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5p1y")
}],
"loop": true,
"name": &"shield_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lgt3")
}],
"loop": true,
"name": &"shield_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulhc5")
}],
"loop": true,
"name": &"shield_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wytgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfxne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5jly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab2pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmsis")
}],
"loop": true,
"name": &"sword_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0jh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueivt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rmoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62s6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc5pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18157")
}],
"loop": true,
"name": &"sword_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e145y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m18rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_636e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exvnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akb0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blj82")
}],
"loop": true,
"name": &"sword_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnuna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uyw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_055un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx430")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5eme")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u22x")
}],
"loop": true,
"name": &"sword_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7880")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gkw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71a78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2wnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsxq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy35p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8dgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rbag")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80q47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ab8i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wajoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31rr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gse6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fmjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkjm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8ppt")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp60a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l705")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pehs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l488e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j5s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j51b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoq1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rhjp")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m6vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfeuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqlcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cujht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4fdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwksv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20y7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c314b")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4f0bt"]
radius = 11.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(-1, 0)
script = ExtResource("1_luo4i")

[node name="Player_collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gxv7v")
debug_color = Color(0, 0.580392, 0.792157, 0.419608)

[node name="Player_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u8b4f")
animation = &"idle_down"

[node name="Sword_timer" type="Timer" parent="."]

[node name="Shield_timer" type="Timer" parent="."]
wait_time = 0.6

[node name="health_bar_p" type="ProgressBar" parent="."]
modulate = Color(1, 0.0470588, 0, 1)
offset_left = -6.0
offset_top = 9.0
offset_right = 124.0
offset_bottom = 36.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="Player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_hitbox"]
shape = SubResource("CircleShape2D_4f0bt")

[node name="Attack_cd" type="Timer" parent="."]

[connection signal="timeout" from="Sword_timer" to="." method="_on_sword_timer_timeout"]
[connection signal="timeout" from="Shield_timer" to="." method="_on_shield_timer_timeout"]
[connection signal="body_entered" from="Player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="Player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="Attack_cd" to="." method="_on_attack_cd_timeout"]
